# OpenWorld-SpecialtyChemicals

./: .gitignore  .helm-docs.yml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.distroless  LICENSE  Makefile  PRODUCTION_READINESS.md  Plan.MD  README.md  SECURITY.md  cli_demo.py  datasette.yml  docker-compose.yml  emoji_verification.py  hatch.toml  mkdocs.yml  mypy.ini  pyproject.toml  test_validation.py  tox.ini  validation_test.py
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-pr.yml  chart-ci.yml  chart-release.yml  ci.yml  docs.yml  lint.yml  release.yml
charts/: index.yaml  openworld-specialty-chemicals-0.1.0.tgz
charts/openworld-specialty-chemicals/: Chart.yaml  README.md  values.schema.json  values.yaml
data/: lab_batch.csv
docs/: chart_repo.md  cli.md  data_requirements.md  developer-guide.md  index.md  operations.md  user-guide.md
openworld_specialty_chemicals/: __init__.py  cli.py  config.py  errors.py  io.py  lineage.py  logging.py  permits.py  provenance.py  reporting.py  rule_engine.py  rules.py  streaming.py
scripts/: demo_complete_workflow.py  generate_demo_data.py  profile_chemistry.py  release_bump.py
tests/: test_adapters.py  test_agents.py  test_app.py  test_auth_rate_limit.py  test_cli_advise_and_publish.py  test_cli_dry_run.py  test_cli_exit_codes.py  test_cli_pipeline.py  test_dashboard_api.py  test_dashboard_ws_advise.py  test_e2e_complete.py  test_io_schema_limits.py  test_lineage_provenance.py  test_metrics_protect.py  test_property_chemistry.py  test_redis_fanout.py  test_reporting_template.py  test_reports_certificate.py  test_rule_engine.py  test_rules_enhanced.py  test_security_headers.py  test_sorption_decay.py  test_uvicorn_log_config.py  test_ws_limits.py
(+29 files in other folders)
