[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "openworld-specialty-chemicals"
version = "0.1.0"
description = "Monitoring platform for specialty-chemicals effluents: compliance, streaming, modeling, and dashboards"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Nik Jois", email="nikjois@llamasearch.ai"}]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.13.1",
  "typer==0.12.3",
  "click==8.1.7",
  "rich==13.7.1",
  "fastapi==0.114.2",
  "pydantic==2.8.2",
  "uvicorn==0.30.6",
  "jinja2==3.1.4",
  "sqlite-utils==3.36.0",
  "python-dotenv==1.0.1",
  "httpx==0.27.0",
  "starlette==0.38.5",
  "prometheus-client==0.20.0",
  "websockets==12.0",
  "tqdm==4.66.4",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "tox==4.15.1",
  "ruff==0.5.6",
  "mypy==1.10.1",
  "mkdocs==1.6.0",
  "mkdocs-material==9.5.36",
  "bandit==1.7.9",
  "pip-audit==2.7.3",
  "build==1.2.1",
  "hypothesis==6.112.1",
]
ai = ["openai==1.40.0"]
all = [
  "numpy==1.26.4","pandas==2.2.2","scipy==1.13.1",
  "typer==0.12.3","rich==13.7.1",
  "fastapi==0.114.2","uvicorn==0.30.6","jinja2==3.1.4",
  "sqlite-utils==3.36.0",
  "python-dotenv==1.0.1","httpx==0.27.0","starlette==0.38.5",
  "openai==1.40.0"
]

[project.scripts]
openworld-chem = "openworld_specialty_chemicals.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["openworld_specialty_chemicals"]
include = ["openworld_specialty_chemicals/templates/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["I","F","E","W"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=openworld_specialty_chemicals --cov-report=term-missing"
